# AI-Agent-Dashboard

./: .replit  pnpm-lock.yaml  pyproject.toml  vercel.json
artifacts/api-server/: main.py
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/agents/: base.py  debugger.py  deployment.py  designer.py  developer.py  manager.py  orchestrator.py  researcher.py
artifacts/api-server/memory/: memory.json  store.py
artifacts/dashboard/: index.html  vite.config.ts
artifacts/dashboard/.replit-artifact/: artifact.toml
artifacts/dashboard/public/: server.js
artifacts/dashboard/src/: App.tsx  index.css
artifacts/dashboard/src/components/dashboard/: AgentCanvas.tsx  AgentCard.tsx  AgentFleet.tsx  AgentGrid.tsx  LiveLogs.tsx  MemoryPanel.tsx  SimWorld.tsx  StatsBar.tsx  TaskPanel.tsx  TaskSubmit.tsx  TerminalPanel.tsx  WorkflowViz.tsx
artifacts/dashboard/src/components/layout/: DashboardLayout.tsx  Navbar.tsx  Sidebar.tsx
artifacts/dashboard/src/hooks/: useNexus.ts
artifacts/dashboard/src/lib/: api.ts  data.ts  socket.ts
artifacts/dashboard/src/pages/: dashboard.tsx
artifacts/mockup-sandbox/: vite.config.ts
attached_assets/: Pasted-Completely-redesign-the-AI-dashboard-into-a-2D-simulati_1778239513674.txt  Pasted-Improve-the-entire-Nixon-Workspace-UI-to-be-fully-respo_1778237193762.txt  Pasted-Replace-the-current-OpenAI-integration-with-Google-Gemi_1778238059385.txt
